--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container">
         <header>
             <h2>Remeber the Card Game</h2>
+            <p>By Ritish Jain</p>
         </header>
 
         <section class="score-panel">
