add nav in html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<nav>
+      <ul>
+        <li> <button> <a href="https://rjain000.github.io/Tic-Tac-Toe/">Tic-Tac-Toe</a> </button></li>
+        <li> <button><a href="https://rjain000.github.io/memorygame/">Memory Game</a> </button></li>
+      </ul>
+    </nav>
     <div class="container">
         <header>
             <h2>Remeber the Card Game</h2>
